--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat App</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="https://img.icons8.com/ultraviolet/40/000000/chat.png"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-  </head>
+<%- include('_header') -%>
+
   <body>
     <div class="container">
-      <a href="#" class="my-2 d-flex justify-content-center" id="join"
-        >Join Room</a
+      <a href="#" class="my-2 d-flex justify-content-center" id="chat"
+        >Chat</a
       >
 
       <div
