overflow seems to work

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,7 +4,9 @@
     <div class="container h-100" id="chat-container">
       <a href="#" class="my-2 d-flex justify-content-center" id="chat">Chat</a>
       <span class="d-flex justify-content-center"></span>
-      <div id="chat-area"></div>
+      <div class="h-50 overflow-auto">
+        <div id="chat-area"></div>
+      </div>
 
       <div
         class="input-group d-flex justify-content-center"
