admin seems to work, still needs work

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,13 +1,6 @@
 <%- include('_header') -%>
 
     <div class="container h-100" id="chat-container">
-      <button
-        type="button"
-        class="btn btn-secondary my-2 d-flex justify-content-center"
-        id="chat"
-      >
-        Chat
-      </button>
       <span class="d-flex justify-content-center"></span>
       <div class="h-50 overflow-auto">
         <div id="chat-area"></div>
@@ -22,6 +15,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./client.js"></script>
+    <script src="./admin.js"></script>
   </body>
 </html>
