--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -8,10 +8,11 @@
       >
         Chat
       </button>
-      <span class="d-flex justify-content-center"></span>
+      <span class="d-flex justify-content-center" id="title-info"></span>
       <div class="h-50 overflow-auto">
         <div id="chat-area"></div>
       </div>
+      <span class="d-flex justify-content-center" id="typing"></span>
 
       <div class="input-group d-flex justify-content-center" id="input-area">
         <input type="text" class="px-2" placeholder="Enter Message" id="message" />
@@ -22,6 +23,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./client.js"></script>
+    <script type="module" src="./client.js"></script>
   </body>
 </html>
