admin console in the works, need to make sure admin can message clients properly

--- a/public/style.css
+++ b/public/style.css
@@ -55,3 +55,14 @@ input {
   border: 1px solid black;
   border-radius: 5px;
 }
+
+#joined-users {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+li:hover {
+  cursor: pointer;
+}
