--- a/views/admin_menu.ejs
+++ b/views/admin_menu.ejs
@@ -18,3 +18,9 @@
     />
   </head>
   <body>
+    <ul id="joined-users"></ul>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="module" src="admin.js"></script>
+  </body>
+</html>
