--- a/views/admin_chat.ejs
+++ b/views/admin_chat.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
       type="image/png"
@@ -39,6 +39,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script type="module" src="../admin.js"></script>
+    <script type="module" src="client.js"></script>
   </body>
 </html>
