✅ MVC design pattern, users DB for login, simpler logic

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,6 +29,7 @@
             class="form-control"
             id="username"
             placeholder="JohnDoe"
+            required
           />
         </div>
         <div class="form-group">
