--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -18,30 +18,28 @@
     />
   </head>
   <body>
-    <div class="container h-100" id="chat-container">
-      <button
-        type="button"
-        class="btn btn-secondary my-2 d-flex justify-content-center"
-        id="chat"
-      >
-        Chat
-      </button>
-      <span class="d-flex justify-content-center" id="title-info"></span>
-      <div class="h-50 overflow-auto">
-        <div id="chat-area"></div>
-      </div>
-      <span class="d-flex justify-content-center" id="typing"></span>
+    <button type="button" class="btn btn-secondary" id="chat-button">
+      Chat
+    </button>
+    <div class="container" id="chat-container">
+      <span id="close-chat">&Cross;</span>
+      <div id="user-info"></div>
+      <div id="chat-area">
+        <div class="d-flex justify-content-center" id="date-info"></div>
+        <div id="message-area"></div>
+        <div class="d-flex justify-content-center" id="typing"></div>
 
-      <div class="input-group d-flex justify-content-center" id="input-area">
-        <input
-          type="text"
-          class="px-2"
-          placeholder="Enter Message"
-          id="message"
-        />
-        <button type="submit" class="btn btn-primary ml-2" id="send">
-          Send
-        </button>
+        <div class="input-group d-flex justify-content-center" id="input-area">
+          <input
+            type="text"
+            class="px-2"
+            placeholder="Enter Message"
+            id="message"
+          />
+          <button type="submit" class="btn btn-primary ml-2" id="send">
+            Send
+          </button>
+        </div>
       </div>
     </div>
 
